@@ -6,14 +6,15 @@ Process Hacker
    * POSIX process support, including command lines and 
      highlighting
    * Hidden processes scanner can now detect FUTo
+   * Ability to terminate system threads
    * Ability to set DEP status of processes in other sessions
-   * Automatic tree text coloring, allowing for dark highlighting 
-     colors
    * Terminator test: TP1a (TP1, alternative method)
    * Terminator test: TT1a (TT1, alternative method)
    * Terminator test: TT4 (dangerous thread termination)
    * Thread wait analysis now detects NtQueryObject hangs
    * Better file object names without KProcessHacker
+   * Automatic tree text coloring, allowing for dark highlighting 
+     colors
    * Small performance improvements
  * FIXED:
    * Broken system thread start addresses due to sign-extending 
